# zemmourify

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
notebooks/: example.ipynb  zemmourify.ipynb
tests/: test__main__.py  test_utils.py
zemmourify/: __init__.py  __main__.py  config.py  logs.py  utils.py
